FISH-8652: Downgrade list construction in JetClassLoader.